--- a/index.html
+++ b/index.html
@@ -59,10 +59,10 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 1</h2>
+									<a href="https://github.com/fyf820/CPSC386-midterm">
+										<h2>CPSC386-midterm</h2>
 										<div class="content">
-											<p>project 1</p>
+											<p>code for Ship and Vector</p>
 										</div>
 									</a>
 								</article>
