--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
 									<span class="image">
 										<img src="images/pic02.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 2</h2>
+									<a href="https://github.com/fyf820/CrossyRoad">
+										<h2>Crossy Road</h2>
 										<div class="content">
 											<p>project 2</p>
 										</div>
