--- a/index.html
+++ b/index.html
@@ -81,8 +81,8 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 3</h2>
+									<a href="https://github.com/fyf820/cpsc386final">
+										<h2>CPSC386 Final 3</h2>
 										<div class="content">
 											<p>project 3</p>
 										</div>
