--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 4</h2>
+									<a href="https://github.com/fyf820/cpsc386final">
+										<h2>final code</h2>
 										<div class="content">
 											<p>project 4</p>
 										</div>
