update some projects

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE HTML>
+﻿<!DOCTYPE HTML>
 <!--
 	Phantom by HTML5 UP
 	html5up.net | @ajlkn
@@ -22,7 +22,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Yifei</span>
+									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">Home</span>
 								</a>
 
 							<!-- Nav -->
@@ -40,10 +40,7 @@
 						<h2>Menu</h2>
 						<ul>
 							<li><a href="index.html">Home</a></li>
-							<li><a href="generic.html">Ipsum veroeros</a></li>
-							<li><a href="generic.html">Tempus etiam</a></li>
-							<li><a href="generic.html">Consequat dolor</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="generic.html">About Me</a></li>
 						</ul>
 					</nav>
 
@@ -52,17 +49,17 @@
 						<div class="inner">
 							<header>
 								<h1>Yifei Feng</h1>
-								<p>Hi, I'm still trying to figure out how to write html</p>
+								<p>The sections below is my projects in Computer Science, some of them are still working</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="https://github.com/fyf820/CPSC386-midterm">
-										<h2>CPSC386-midterm</h2>
+									<a href="">
+										<h2>Foinder</h2>
 										<div class="content">
-											<p>code for Ship and Vector</p>
+											<p>Anroid App to find restaurant nearby</p>
 										</div>
 									</a>
 								</article>
@@ -73,7 +70,7 @@
 									<a href="https://github.com/fyf820/CrossyRoad">
 										<h2>Crossy Road</h2>
 										<div class="content">
-											<p>project 2</p>
+											<p>Cross Road Game implemented in Unreal Engine 4</p>
 										</div>
 									</a>
 								</article>
@@ -81,10 +78,10 @@
 									<span class="image">
 										<img src="images/pic03.jpg" alt="" />
 									</span>
-									<a href="https://github.com/fyf820/cpsc386final">
-										<h2>CPSC386 Final 3</h2>
+									<a href="https://github.com/fyf820/SchoolManager">
+										<h2>School Manage Application</h2>
 										<div class="content">
-											<p>project 3</p>
+											<p>School Manage application used Spring Boot framework</p>
 										</div>
 									</a>
 								</article>
@@ -92,10 +89,10 @@
 									<span class="image">
 										<img src="images/pic04.jpg" alt="" />
 									</span>
-									<a href="https://github.com/fyf820/cpsc386final">
-										<h2>final code</h2>
+									<a href="https://github.com/fyf820/pacmangame">
+										<h2>Pacman Game</h2>
 										<div class="content">
-											<p>project 4</p>
+											<p>Pacman Game implemented by Python</p>
 										</div>
 									</a>
 								</article>
@@ -128,7 +125,7 @@
 									<a href="generic.html">
 										<h2>project 7</h2>
 										<div class="content">
-											<p>project 7</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -139,7 +136,7 @@
 									<a href="generic.html">
 										<h2>project 8</h2>
 										<div class="content">
-											<p>project 8</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -150,7 +147,7 @@
 									<a href="generic.html">
 										<h2>project 9</h2>
 										<div class="content">
-											<p>project 9</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -161,7 +158,7 @@
 									<a href="generic.html">
 										<h2>project 10</h2>
 										<div class="content">
-											<p>project 10</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -172,7 +169,7 @@
 									<a href="generic.html">
 										<h2>project 11</h2>
 										<div class="content">
-											<p>project 11</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -183,7 +180,7 @@
 									<a href="generic.html">
 										<h2>project 12</h2>
 										<div class="content">
-											<p>project 12</p>
+											<p>working</p>
 										</div>
 									</a>
 								</article>
@@ -195,31 +192,12 @@
 					<footer id="footer">
 						<div class="inner">
 							<section>
-								<h2>Get in touch</h2>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<input type="text" name="name" id="name" placeholder="Name" />
-										</div>
-										<div class="field half">
-											<input type="email" name="email" id="email" placeholder="Email" />
-										</div>
-										<div class="field">
-											<textarea name="message" id="message" placeholder="Message"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send" class="primary" /></li>
-									</ul>
-								</form>
-							</section>
-							<section>
 								<h2>Follow</h2>
 								<ul class="icons">
-									<li><a href="#" class="icon brands style2 fa-github"><span class="label">GitHub</span></a></li>
-									<li><a href="#" class="icon brands style2 fa-linkedin"><span class="label">linkedin</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
-									<li><a href="#" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
+									<li><a href="https://github.com/fyf820" class="icon brands style2 fa-github" target="_blank><span class="label"></span></a></li>
+									<li><a href="https://www.linkedin.com/in/yifei-feng-8480021ba/" class="icon brands style2 fa-linkedin" target="_blank><span class="label"></span></a></li>
+									<li><a href="tel:7147266612" class="icon solid style2 fa-phone"><span class="label">Phone</span></a></li>
+									<li><a href="mailto:yfeng820@gmail.com" class="icon solid style2 fa-envelope"><span class="label">Email</span></a></li>
 								</ul>
 							</section>
 							<ul class="copyright">
