--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 									<span class="image">
 										<img src="images/pic01.jpg" alt="" />
 									</span>
-									<a href="">
+									<a href="https://github.com/fyf820/Foinder">
 										<h2>Foinder</h2>
 										<div class="content">
 											<p>Anroid App to find restaurant nearby</p>
@@ -100,10 +100,10 @@
 									<span class="image">
 										<img src="images/pic05.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 5</h2>
+									<a href="http://csweb01.csueastbay.edu/~yb7594/dist/">
+										<h2>Club Website</h2>
 										<div class="content">
-											<p>project 5</p>
+											<p>Club Website created with REACT framework</p>
 										</div>
 									</a>
 								</article>
@@ -111,10 +111,10 @@
 									<span class="image">
 										<img src="images/pic06.jpg" alt="" />
 									</span>
-									<a href="generic.html">
-										<h2>project 6</h2>
+									<a href="https://github.com/fyf820/Piano-Tiles">
+										<h2>Piano Tiles</h2>
 										<div class="content">
-											<p>project 6</p>
+											<p>A Game written by Java</p>
 										</div>
 									</a>
 								</article>
@@ -146,39 +146,6 @@
 									</span>
 									<a href="generic.html">
 										<h2>project 9</h2>
-										<div class="content">
-											<p>working</p>
-										</div>
-									</a>
-								</article>
-								<article class="style5">
-									<span class="image">
-										<img src="images/pic10.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>project 10</h2>
-										<div class="content">
-											<p>working</p>
-										</div>
-									</a>
-								</article>
-								<article class="style6">
-									<span class="image">
-										<img src="images/pic11.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>project 11</h2>
-										<div class="content">
-											<p>working</p>
-										</div>
-									</a>
-								</article>
-								<article class="style4">
-									<span class="image">
-										<img src="images/pic12.jpg" alt="" />
-									</span>
-									<a href="generic.html">
-										<h2>project 12</h2>
 										<div class="content">
 											<p>working</p>
 										</div>
