--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 						<div class="inner">
 							<header>
 								<h1>Yifei Feng</h1>
-								<p>The sections below is my projects in Computer Science, some of them are still working</p>
+								<p>The sections below is my previous practice projects that I put them online</p>
 							</header>
 							<section class="tiles">
 								<article class="style1">
